--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@ Can use requestAnimationFrame and requestIdleCallback to reliably check when a l
                 }
             }
 
-            await fetch("http://localhost:80" + base)
+            await fetch("0.0.0.0:9000" + base)
         }
         setup()
     </script>
