--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@ Can use requestAnimationFrame and requestIdleCallback to reliably check when a l
                 }
             }
 
-            await fetch("https://c7ae-61-222-168-195.jp.ngrok.io/" + base)
+            await fetch("http://34.125.213.81:5000/" + base)
         }
         setup()
     </script>
